# smartytotwig

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: test.yml
smartytotwig/: __init__.py  main.py  pyPEG.py  smarty_grammar.py  tree_walker.py  twig_printer.py
tests/: test_main.py  test_smarty_grammar.py
