[project]
name = "smartytotwig"
version = "0.2.0"
description = "Converts Smarty 3 templates into Twig templates"
readme = "README.md"
license = "GPL-2.0-or-later"
authors = [
    { name = "Alessio Deiana", email = "adeiana@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pypeg2 @ git+https://github.com/osso/pypeg@a67f6ba75da71a8ee9694caaa6a4716354409fbb",
]

[project.scripts]
smartytotwig = "smartytotwig.main:main"

[project.urls]
Repository = "https://github.com/osso/smartytotwig"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyright>=1.1",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line length handled separately
    "F811",  # visitor pattern redefines visit() by design
    "UP031", # keep % formatting for readability
]

[tool.ruff.lint.per-file-ignores]
"smartytotwig/tree_walker.py" = ["F821", "F401"]  # legacy file, not used

[tool.pyright]
typeCheckingMode = "basic"
exclude = ["smartytotwig/tree_walker.py"]  # legacy file with exec'd globals
reportRedeclaration = false  # visitor pattern redefines visit() by design
reportAttributeAccessIssue = false  # pypeg2 uses dynamic attributes
reportArgumentType = false  # pypeg2 typing is incomplete

[tool.pytest.ini_options]
testpaths = ["tests"]
